--- a/Shopping/src/main/webapp/login.html
+++ b/Shopping/src/main/webapp/login.html
@@ -15,7 +15,7 @@
             <input type="submit" value="Login">
         </form>
         <div class="links">
-            <p>Don't have an account yet? <a href="registration.html">Register here</a></p>
+            <p>Don't have an account yet? <a href="/registration">Register here</a></p>
             <p>Forgot your password? <a href="reset_password.html">Reset here</a></p>
         </div>
     </div>
